bos/src/client/packages/panels/src/items/_tray.scss
/*
 * OS.js - JavaScript Cloud/Web Desktop Platform
 *
 * Copyright (c) 2011-2019, Anders Evenrud <andersevenrud@gmail.com>
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *
 * 1. Redistributions of source code must retain the above copyright notice, this
 *    list of conditions and the following disclaimer
 * 2. Redistributions in binary form must reproduce the above copyright notice,
 *    this list of conditions and the following disclaimer in the documentation
 *    and/or other materials provided with the distribution
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 * DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
 * ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
 * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
 * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
 * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 *
 * @author  Anders Evenrud <andersevenrud@gmail.com>
 * @licence Simplified BSD License
 */


/*.osjs-panel-item[data-name=tray] {
  display: flex;
  padding: 0;
  & > div {
    flex: 1 1;
    padding: .5em;
    margin: 4px 1px;
    background: #e1eff4;
    border-radius: 50%;

    & > img {
      margin-right: 0;
      vertical-align: middle;
      height: 100%;
      width: auto;
    }
  }
}*/

.badge {
color:white;
  position: absolute;
    right: unset;
    left: unset;
}

@media all {
  .osjs-panel-item[data-name=tray] {
    display: flex;
    padding: 0;
    & > div {
      flex: 1 1;
      padding: .5em;
      margin: 4px 1px;
      background: #e1eff4;
      border-radius: 50%;
      padding: 0px;
      height:45px;
      width:45px;
  
      & > img {
        margin-right: 0;
        vertical-align: middle;
        height: 35px;
        width: auto;
        margin-left: 5px;
      }
    }
  }
  
  .osjs-panel-item[data-name=profile] {
    display: flex;
    padding: 0;
    width: 50px;
    & > div {
      flex: 1 1;
      margin: 4px 1px;
      & > img {
        margin-right: 0;
        vertical-align: middle;
        height: 102%;
        width: 100%;
      }
    }
  }
}

@supports (-ms-ime-align:auto) {
  .osjs-panel-item[data-name=tray] {
    display: flex;
    padding: 0;
    & > div {
      flex: 1 1;
      padding: .5em;
      margin: 4px 1px;
      background: #e1eff4;
      border-radius: 50%;
      padding: 0px;
      height:45px;
      width:45px;
  
      & > img {
        margin-right: 0;
        vertical-align: middle;
        height: 35px;
        width: auto;
        margin-left: 5px;
      }
    }
  }
  
  .osjs-panel-item[data-name=profile] {
    display: flex;
    padding: 0;
    width: 50px;
    & > div {
      flex: 1 1;
      margin: 4px 1px;
      & > img {
        margin-right: 0;
        vertical-align: middle;
        height: 100%;
        width: auto;
      }
    }
  }
  
}

@-moz-document url-prefix() { 
  
.osjs-panel-item[data-name=tray] {
  display: flex;
  padding: 0;
  & > div {
    flex: 1 1;
    padding: .5em;
    margin: 4px 1px;
    background: #e1eff4;
    border-radius: 50%;
    padding: 0px;
    height:45px;
    width:45px;

    & > img {
      margin-right: 0;
      vertical-align: middle;
      height: 35px;
      width: auto;
      margin-left: 5px;
    }
  }
}

.osjs-panel-item[data-name=profile] {
  display: flex;
  padding: 0;
  width: 50px;
  & > div {
    flex: 1 1;
    margin: 4px 1px;
    & > img {
      margin-right: 0;
      vertical-align: middle;
      height: 100%;
      width: auto;
    }
  }
}

}


.badgeCheck {
    height: 15px;
    width: 15px;
    border-radius: 14px;
    background-color: red;
    font-size: 12px;
    padding: 3px;
    display: inline-block;
    text-align: center;
    position: absolute;
    bottom: 5px;
}

.osjs-root[data-dir="rtl"] {
  .osjs-panel-item[data-name=tray] > div:not(:last-child) {
    margin-right: 0;
    margin-left: $base-margin;
  }
}

/*.osjs-panel-item[data-name=profile] {
  display: flex;
  padding: 0;
  & > div {
    flex: 1 1;
    margin: 4px 1px;
    & > img {
      margin-right: 0;
      vertical-align: middle;
      height: 100%;
      width: auto;
    }
  }
}*/
.osjs-panel-item[data-name=logout] {
  display: flex;
  padding: 0;
  height: auto;


  & > div {
    flex: 1 1;
    padding: 0 $base-margin / 3;

    & > img {
      margin-right: 0;
      vertical-align: middle;
      height:2.8em;
      width:2.8em;
    }
  }
}

